--- a/page/css/about.css
+++ b/page/css/about.css
@@ -1,12 +1,134 @@
 
 .about_content {
     width: 100%;
+    margin-bottom: 15px;
     padding: 15px;
-    background-color: #fff;
+    background-color: #f5f5f5;
     box-shadow: 1px 1px 10px #5f5f5f;
     box-sizing: border-box;;
 }
 
-.about_me dt {
-    border-bottom: 1px solid #eee;
+.about_me {
+    margin-bottom: 20px;
 }
+
+
+.about_me h2,
+.about_blog h2 {
+    margin-bottom: 15px;
+    padding: 10px 0;
+    border-bottom: 2px solid #eee;
+}
+
+.about_me p,
+.about_blog p {
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+.about_comment_items {
+    margin: 10px 0;
+    padding: 15px;
+    border: 1px dashed #7ca4c1;
+    background-color: #d9edf7;
+    color: #31708f;
+}
+
+.comment_item {
+    padding: 5px;
+    border: 1px dashed #7ca4c1;
+    margin-top: 10px;
+}
+
+.comment_item .info {
+    margin-bottom: 5px;
+}
+
+.comment_item .info .username {
+    font-size: 16px;
+    font-weight: bolder;
+    margin-right: 10px;
+}
+
+.comment_item .info a {
+    margin-left: 10px;
+    text-decoration: none;
+    color: #31708f;
+}
+
+.comment_item .comment_msg {
+    font-size: 16px;
+}
+
+.send_comment {
+    padding: 15px;
+    box-shadow: 1px 1px 10px #5f5f5f;
+    background-color: #f5f5f5;
+}
+
+.send_comment p {
+    margin: 10px 0;
+}
+
+.send_comment input,
+.send_comment textarea {
+    padding: 8px;
+    border: 1px solid #e3e3e3;
+    border-radius: 5px;
+    outline: none
+}
+
+.send_comment input:focus,
+.send_comment textarea:focus {
+    box-shadow: 1px 1px 10px #7ca4c1;
+}
+
+.send_comment .username {
+    width: 30%;
+    margin-right: 15px;
+}
+
+.send_comment .email {
+    width: 50%;
+}
+
+.send_comment .msg {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.send_comment .code {
+    width: 30%;
+}
+
+.send_comment .sendBtn,
+.send_comment .rewriteBtn {
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #5f5f5f;
+    border-radius: 5px;
+    outline: none;
+}
+
+.send_comment .sendBtn:hover,
+.send_comment .rewriteBtn:hover {
+    background-color: #e3e3e3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
