--- a/page/css/about.css
+++ b/page/css/about.css
@@ -32,6 +32,8 @@
     border: 1px dashed #7ca4c1;
     background-color: #d9edf7;
     color: #31708f;
+    box-shadow: 1px 1px 10px #7ca4c1;
+
 }
 
 .comment_item {
